--- a/style.css
+++ b/style.css
@@ -82,4 +82,9 @@ footer>p:nth-child(2){
         margin-left: auto;
         margin-right: auto;
     }
+    
+    .left-nav{
+        padding-left: 50px;
+        padding-right: 20px;
+    }
 }
