--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ h2{
     text-align: left;
 }
 
-.right-main>div{
-    padding: 5px;
-}
-
 img.photo{
     width: 80%;
     margin-top: 50px;
@@ -30,8 +26,7 @@ img.photo{
 }
 
 a>img{
-    width: 300px;
-    margin: 20px;
+    width: 350px;
     opacity: 0.8;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -82,9 +77,10 @@ footer>p:nth-child(2){
         margin-left: auto;
         margin-right: auto;
     }
-    
-    .left-nav{
-        padding-left: 50px;
-        padding-right: 20px;
+}
+
+@media only screen and (min-width: 767px){
+    body{
+        margin-left: 4%;
     }
 }
