--- a/style.css
+++ b/style.css
@@ -10,19 +10,17 @@ h1{
     font-size: 4vw;
 }
 
-h2{
-    font-size: 3vw;
-}
-
 .left-nav{
     text-align: left;
 }
 
 img.photo{
-    width: 80%;
+    width: 75%;
     margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+img.icons{
+    width: 40px;
 }
 
 a>img{
@@ -84,9 +82,6 @@ footer>p:nth-child(2){
 }
 
 @media only screen and (min-width: 767px){
-    body{
-        margin-left: 4%;
-    }
 
     .left-nav{
         text-align: left;
