--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+.container {
+    max-width: 1400px;
+}
+
 h1{
     font-family: 'Vidaloka', sans-serif;
     font-size: 4vw;
