--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 h1{
     font-family: 'Vidaloka', sans-serif;
-    font-size: 4vw;
+    font-size: 60px;
 }
 
 .left-nav{
@@ -20,7 +20,7 @@ h1{
 }
 
 img.photo{
-    width: 75%;
+    max-width: 1000px;
     margin-top: 50px;
 }
 
