--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 body {
-    padding-left: .5%;
-    padding-right: .5%;
-    text-align: center;
     font-family: 'Raleway', sans-serif;
-}
-
-.pagecontainer {
-    max-width: 1600px;
-    margin: 0 auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
 }
 
 h1{
@@ -80,6 +75,9 @@ footer>p:nth-child(2){
 }
 
 @media only screen and (max-width: 767px){
+    body{
+        padding: 0;
+    }
     img.photo{
         width: 90%;
         margin-top: 15px;
