--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@ body {
     padding-right: 5%;
     text-align: center;
 }
+a, a:hover, a:active, a:visited{
+    font-weight: bold;
+    letter-spacing: .1em;
+}
 
 h1{
     font-family: 'Vidaloka', sans-serif;
     font-size: 60px;
     -webkit-font-smoothing: antialiased;
+}
+
+p.tags{
+    color: #777;
 }
 
 .left-nav{
