--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 a, a:hover, a:active, a:visited{
     font-weight: bold;
     letter-spacing: .1em;
+    text-transform: uppercase;
 }
 
 h1{
