--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: 'Raleway', sans-serif;
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
 }
 a, a:hover, a:active, a:visited{
     font-weight: bold;
@@ -13,22 +16,19 @@ h1{
     -webkit-font-smoothing: antialiased;
 }
 
-section {
-    width: 100%;
-    padding: 2em 5em;
-}
-
-section:nth-child(1){
-    background-color: #f3eaf7;
-}
-
 p.tags{
     color: #777;
     font-size: 0.8em;
 }
 
+.left-nav{
+    background-color: #f3eaf7;
+    height: 100%;
+    text-align: left;
+}
+
 img.photo{
-    margin-right: 2em;
+    margin-top: 50px;
     max-width: 200px;
 }
 
@@ -49,10 +49,6 @@ img:hover{
     filter: none;
     -webkit-transition: filter .8s;
     transition: filter .8s;
-}
-
-.modal {
-    text-align: center;
 }
 
 .modal-body>img, .modal-footer>img{
@@ -87,4 +83,29 @@ footer>p:nth-child(2){
     text-align: right;
     font-size: .8em;
     padding-right: 15px;
+}
+
+@media only screen and (max-width: 767px){
+    body{
+        padding: 0;
+    }
+    img.photo{
+        width: 90%;
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (min-width: 767px){
+
+    .left-nav{
+        text-align: left;
+        float: left;
+        position: fixed;
+    }
+
+    .right-main{
+        float: right;
+    }
 }
