--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ section {
 
 section:nth-child(1){
     background-color: #f3eaf7;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
 p.tags{
@@ -28,8 +29,8 @@ p.tags{
 }
 
 img.photo{
-    margin-right: 2em;
-    max-width: 200px;
+    margin: 1em 1.5em 0 0;
+    max-width: 180px;
 }
 
 img.icons{
@@ -68,23 +69,8 @@ img:hover{
     text-align: center;
 }
 
-footer>p:nth-child(1){
-    position: fixed;
-    left:0;
-    bottom:0;
-    height:30px;
-    width:100%;
-    text-align: right;
-    font-size: .8em;
-    padding-right: 15px;
-}
-
-footer>p:nth-child(2){
-    left:0;
-    bottom:0;
-    height:30px;
-    width:100%;
-    text-align: right;
-    font-size: .8em;
-    padding-right: 15px;
+footer{
+    background-color: #d0d0d0;
+    color: #262626;
+    padding: 2em 0;
 }
