--- a/style.css
+++ b/style.css
@@ -28,9 +28,22 @@ p.tags{
     font-size: 0.8em;
 }
 
+.port {
+    text-align: right;
+}
 img.photo{
-    margin: 1em 1.5em 0 0;
+    margin: 1em 0 0;
     max-width: 180px;
+}
+
+@media screen and (max-width: 767px){
+    section:nth-child(1), .port{
+        text-align: center;
+    }
+    img.photo{
+        margin: 0 auto;
+        max-width: 180px;
+    }
 }
 
 img.icons{
