--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Vidolaka|Raleway|Noto+Sans');
+
 body {
-    font-family: 'Raleway', sans-serif;
+    color: #231f20;
+    font-family: 'Noto Sans', Arial, sans-serif;
 }
 a, a:hover, a:active, a:visited{
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     letter-spacing: .1em;
     text-transform: uppercase;
 }
 
 h1{
-    font-family: 'Vidaloka', sans-serif;
+    font-family: 'Vidaloka', "Times New Roman", sans-serif;
     font-size: 60px;
     -webkit-font-smoothing: antialiased;
+}
+
+h2,h3,h4{
+    font-family: 'Raleway', sans-serif;
 }
 
 section {
@@ -19,7 +27,7 @@ section {
 }
 
 section:nth-child(1){
-    background-color: #f3eaf7;
+    background-color: #c9b6d4;
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -37,7 +45,7 @@ img.photo{
 }
 
 @media screen and (max-width: 767px){
-    section:nth-child(1), .port{
+    body, section:nth-child(1), .port{
         text-align: center;
     }
     img.photo{
@@ -52,17 +60,29 @@ img.icons{
 
 a>img{
     width: 350px;
-    opacity: 0.8;
-    -webkit-filter: grayscale(100%);
+    opacity: 0.9;
     filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
 }
 
-img:hover{
+a>img:hover{
     opacity: 1;
-    -webkit-filter: none;
     filter: none;
-    -webkit-transition: filter .8s;
-    transition: filter .8s;
+    -webkit-filter: none;
+    transition: all .2s;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -o-transition: all .2s;
+}
+
+@media screen and (min-width:768px){
+    a>img:hover{
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
 }
 
 .modal {
