--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a, a:hover, a:active, a:visited{
 }
 
 h1{
-    font-family: 'Vidaloka', "Times New Roman", sans-serif;
+    font-family: 'Rubik', "Times New Roman", sans-serif;
     font-size: 60px;
     -webkit-font-smoothing: antialiased;
 }
@@ -43,7 +43,7 @@ header{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7c3e3', endColorstr='#e4d0f0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
     padding: 2em 0;
-    min-height: 550px;
+    min-height: 600px;
 }
 
 header h1 {
