--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik|Source+Sans+Pro');
 
-body {
+body{
     color: #231f20;
     font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 a, a:hover, a:active, a:visited{
+    color: #999;
     font-family: 'Source Sans Pro', Arial, sans-serif;
     font-weight: bold;
     letter-spacing: .1em;
@@ -24,7 +25,11 @@ h1{
     -webkit-font-smoothing: antialiased;
 }
 
-h2,h3,h4{
+h2{
+    font-size: 1em;
+    text-transform: uppercase;
+}
+h3,h4{
     font-family: 'Rubik', sans-serif;
 }
 
@@ -40,10 +45,11 @@ header{
     background: linear-gradient(155deg, #d7c3e3 0%,#e4d0f0 100%);*/
     background: url('resources/images/laptop-mug.jpg') center center no-repeat;
     background-size: cover;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7c3e3', endColorstr='#e4d0f0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7c3e3', endColorstr='#e4d0f0',GradientType=1 ); IE6-9 fallback on horizontal gradient */
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
     padding: 2em 0;
-    min-height: 600px;
+    height: 100vh;
+    min-height: 500px;
 }
 
 header h1 {
