--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ header{
     background: -moz-linear-gradient(-25deg, #d7c3e3 0%, #e4d0f0 100%);
     background: -webkit-linear-gradient(-25deg, #d7c3e3 0%,#e4d0f0 100%);
     background: linear-gradient(155deg, #d7c3e3 0%,#e4d0f0 100%);*/
-    background: url('resources/images/laptop-mug.jpg') center center no-repeat;
+    background: linear-gradient(black,black), url('resources/images/laptop-mug.jpg') center center no-repeat;
     background-size: cover;
+    background-blend-mode: saturation;
     /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7c3e3', endColorstr='#e4d0f0',GradientType=1 ); IE6-9 fallback on horizontal gradient */
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
     padding: 2em 0;
