--- a/style.css
+++ b/style.css
@@ -109,6 +109,19 @@ a>img:hover{
     }
 }
 
+form {
+    max-width: 488px;
+}
+
+form .field label {
+    visibility: hidden;
+}
+
+form button[type=submit]:hover{
+    color: #cfcfcf;
+    background-color: #5f5f5f;
+}
+
 .modal {
     text-align: center;
 }
