--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
     color: #231f20;
     font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-size: 16px;
 }
 a, a:hover, a:active, a:visited{
     color: #999;
@@ -26,7 +27,7 @@ h1{
 }
 
 h2{
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -36,7 +37,7 @@ h3,h4{
 
 header, section {
     width: 100%;
-    padding: 2em 5em;
+    padding: 3em 5em 4em;
 }
 
 header{
@@ -78,6 +79,9 @@ img.photo{
     img.photo{
         margin: 0 auto;
         max-width: 180px;
+    }
+    ul {
+        text-align: left;
     }
 }
 
@@ -150,5 +154,5 @@ form button[type=submit]:hover{
 footer{
     background-color: #333;
     color: #dfdfdf;
-    padding: 2em 0;
+    padding: 1em 0;
 }
