--- a/style.css
+++ b/style.css
@@ -139,6 +139,14 @@ form button[type=submit]:hover{
     background-color: #5f5f5f;
 }
 
+span.placeholder-title {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    font-size: 5em;
+    line-height: 1.25em;
+}
+
 .modal {
     text-align: center;
 }
